# FinanceRAG

./: .gitignore  Dockerfile  baseline-for-task-1-with-official-github.ipynb  docker-compose.yml  evaluate.ipynb  pyproject.toml  run_hybrid.ipynb  run_hybrid_w_expansion_and_extraction.ipynb  run_test.py  runner_test.ipynb  task_runner.py
Linq-AI-Research/FinanceRAG/ConvFinQA/: queries_prep_extraction_expansion.jsonl  queries_prep_plutus.jsonl
Linq-AI-Research/FinanceRAG/FinDER/: queries_prep_extraction_expansion.jsonl  queries_prep_plutus.jsonl
Linq-AI-Research/FinanceRAG/FinQA/: queries_prep_extraction_expansion.jsonl  queries_prep_plutus.jsonl
Linq-AI-Research/FinanceRAG/FinQABench/: queries_prep_extraction_expansion.jsonl  queries_prep_plutus.jsonl
Linq-AI-Research/FinanceRAG/FinanceBench/: queries_prep_extraction_expansion.jsonl  (+1 more)
financerag/common/: protocols.py
financerag/rerank/: __init__.py  rrf.py
financerag/retrieval/: __init__.py  bm25.py
financerag/tasks/: BaseTask.py  ConvFinQATask.py  FinDERTask.py  FinQABenchTask.py  FinQATask.py  FinanceBenchTask.py  MultiHierttTask.py  TATQATask.py
results/: combined_results.csv  metrics.txt
results/ConvFinQA/: original_results.jsonl  results.csv
results/FinDER/: original_results.jsonl  results.csv
results/FinQA/: original_results.jsonl  results.csv
results/FinQABench/: original_results.jsonl  results.csv
results/FinanceBench/: original_results.jsonl  results.csv
results/MultiHiertt/: original_results.jsonl  results.csv
results/TAT-QA/: original_results.jsonl  results.csv
(+4 files in other folders)
