[project]
name = "financerag"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12,<3.13"
dependencies = [
    "datasets~=3.0.0",
    "flash-attn>=2.8.3",
    "graphrag>=0.3.6",
    "ipykernel>=7.1.0",
    "nltk~=3.9.1",
    "numpy==1.26.4",
    "openai~=1.47.1",
    "pip>=25.3",
    "pydantic~=2.9.2",
    "pytrec-eval~=0.5",
    "sentence-transformers~=3.1.1",
    "torch",
    "torchaudio>=2.2.2",
    "torchvision>=0.17.2",
    "tqdm>=4.67.1",
    "typing-extensions~=4.12.2",
]

[tool.uv.sources]
torch = [
  { index = "pytorch-cu130", marker = "sys_platform == 'linux' or sys_platform == 'win32'" },
]
torchvision = [
  { index = "pytorch-cu130", marker = "sys_platform == 'linux' or sys_platform == 'win32'" },
]

[[tool.uv.index]]
name = "pytorch-cu130"
url = "https://download.pytorch.org/whl/cu130"
explicit = true
